<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/libraryFragment">

    <fragment
        android:id="@+id/libraryFragment"
        android:name="com.timbra.ui.library.LibraryFragment"
        android:label="@string/library" />

    <fragment
        android:id="@+id/folderTreeFragment"
        android:name="com.timbra.ui.folders.FolderTreeFragment"
        android:label="@string/cat_folders">
        <argument
            android:name="folderPath"
            app:argType="string"
            android:defaultValue="" />
        <argument
            android:name="folderTitle"
            app:argType="string"
            android:defaultValue="Folders" />
    </fragment>

    <fragment
        android:id="@+id/trackListFragment"
        android:name="com.timbra.ui.list.TrackListFragment"
        android:label="@string/library">
        <argument
            android:name="listKind"
            app:argType="string" />
        <argument
            android:name="listId"
            app:argType="long"
            android:defaultValue="-1L" />
        <argument
            android:name="listTitle"
            app:argType="string"
            android:defaultValue="" />
    </fragment>

    <fragment
        android:id="@+id/playerFragment"
        android:name="com.timbra.ui.player.PlayerFragment"
        android:label="" />

    <fragment
        android:id="@+id/queueFragment"
        android:name="com.timbra.ui.queue.QueueFragment"
        android:label="@string/cat_queue" />

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.timbra.ui.search.SearchFragment"
        android:label="@string/menu_search" />
</navigation>
